# PTSD-Ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  config.py  main.py  prompts.py  rag.py  safety.py
data/: urls.txt
docs/: architecture.md  deployment.md  development.md  hebrew-tts.md  llm-comparison.md  safety.md
frontend/phone/: twilio_setup.md
frontend/web/: app.js  index.html  style.css
infra/docker/: Dockerfile  docker-compose.yml  nginx.conf  token_server.py
infra/terraform/: main.tf
ingestion/: __init__.py  chunking.py  ingest.py  scrape_urls.py
ingestion/loaders/: __init__.py
scripts/: init-github.sh
tests/: test_chunking.py  test_safety.py
