[project]
name = "ptsd-ai"
version = "0.1.0"
description = "Hebrew voice RAG agent for PTSD support"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "N",        # pep8-naming
]
ignore = [
    "E501",     # line too long - handled by formatter
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
